# deplodock

./: .gitignore  CLAUDE.md  Makefile  README.md  STYLE.md  TODO-deployment.md  compute_generation.md  config.yaml  generate_benchmark_report.py  libcublas.1.sm_75.cubin  libcublas.10.sm_120.cubin  libcublas.100.sm_86.cubin  libcublas.1005.sm_75.cubin  libcublas.1006.sm_80.cubin  libcublas.1007.sm_90.cubin  libcublas.1008.sm_100.cubin  libcublas.1009.sm_120.cubin  libcublas.101.sm_90.cubin  libcublas.1010.sm_75.cubin  libcublas.1011.sm_80.cubin  libcublas.1012.sm_90.cubin  libcublas.1013.sm_100.cubin  libcublas.1014.sm_120.cubin  libcublas.1015.sm_75.cubin  libcublas.1016.sm_80.cubin  libcublas.1017.sm_90.cubin  libcublas.1018.sm_100.cubin  libcublas.1019.sm_120.cubin  libcublas.102.sm_100.cubin  libcublas.1020.sm_75.cubin  libcublas.1021.sm_80.cubin  libcublas.1022.sm_90.cubin  libcublas.1023.sm_100.cubin  libcublas.1024.sm_120.cubin  libcublas.1025.sm_75.cubin  libcublas.1026.sm_80.cubin  libcublas.1027.sm_90.cubin  libcublas.1028.sm_100.cubin  libcublas.1029.sm_120.cubin  libcublas.103.sm_120.cubin  (+959 more)
.github/scripts/: detect-experiments.py  format-results.py  git-credential-github-app.sh
.github/workflows/: experiment.yml  publish.yml  tests.yml
commands/deploy/: local.py  ssh.py
deplodock/: benchmark.py  config.py  deplodock.py  detect.py  gpu.py  hardware.py  logging_setup.py  redact.py  storage.py  timing.py
deplodock/benchmark/: __init__.py  bench_logging.py  command_workload.py  config.py  execution.py  fixed_hosts.py  results.py  system_info.py  tasks.py  tracking.py  workload.py
deplodock/commands/: ARCHITECTURE.md  bench_layer.py  compile.py  dataset_args.py  eval.py  generate.py  inspect_graph.py  knobfmt.py  knobs.py  pull.py  run.py  serve.py  split.py  teardown.py  trace.py  tune.py  tune_data.py  tune_progress.py
deplodock/compiler/: ARCHITECTURE.md  __init__.py  autotune.py  benchmark.py  block_planner.py  cache.py  context.py  coord_expr.py  dim.py  dtype.py  dump.py  fusion.py  graph.py  hints.py  ir.py  kernel_gen.py  lower.py  matcher.py  ops.py  pattern.py  pipeline.py  plan.py  provenance.py  rewriter.py  shape_utils.py  structural.py  target.py  tensor.py  torch_trace.py  trace.py  tuning.py
deplodock/deploy/: __init__.py  compose.py  local.py  log_phases.py  orchestrate.py  params.py  recipe.py  ssh.py
deplodock/planner/: __init__.py  group_by_model_and_gpu.py  variant.py
deplodock/provisioning/: ARCHITECTURE.md  __init__.py  candidates.py  cloud.py  cloudrift.py  errors.py  gcp.py  gcp_flex_start.py  remote.py  shell.py  ssh.py  ssh_target.py  ssh_transport.py  staging.py  types.py
docs/: docusaurus.config.js  package-lock.json  package.json  sglang-awq-moe.md  warp-specialized-fused-prologue.md
emmy/: __init__.py  config.py  detect.py  emmy.py  gpu.py  hardware.py  logging_setup.py  redact.py  storage.py
evaluation_results/: 2026-06-29_analytic-prior_nodes_4090-5090.md
goldens/: matmul.yaml
kernels/: k_add_3_reduce.json  k_add_5_reduce.json  k_linear_1_reduce_reduce.json  k_linear_2_reduce_reduce.json  k_linear_4_reduce.json  k_linear_reduce_reduce.json  k_mul_1_reduce.json  k_mul_7_reduce.json  k_mul_8_reduce.json  k_scaled_dot_product_attention_masked_reduce.json  k_scaled_dot_product_attention_reduce_reduce.json
plans/: algebra-knob-naming-schema.md  algebra-licensed-decomposition-moves.md  algebraic-carrier-analysis.md  analytic-prior-per-card-refit-findings.md  analytic-prior-refactor.md  atomic-free-monoid-combine.md  atomic-free-splitk.md  atomic-free-streamk.md  axis-named-schedule-knobs.md  bench-attribution-by-slicing.md  collapse-stage-layer.md  communicate-value-prop.md  composer-masked-warp-symbolic-n.md  composer-only-green-suite.md  composite-build-unification.md  cooperative-reduction-tile-ir.md  dag-edge-placement-split-as-enumeration.md  derive-coordination-from-body.md  drop-overhang-knob-structural-masked-feature.md  dynamic-shape-goldens.md  dynamic-shapes.md  explicit-knob-off-values.md  factorize-consolidation.md  finish-partition-planner.md  finish-stage-wrap-body-refactor.md  flash-enhancements.md  fuse-mul-into-accum.md  fused-symbolic-pv-smem-staged.md  gated-mlp-tensor-cores.md  generative-decode-perf-findings.md  generative-device-resident-decode.md  generative-inference-support.md  generic-cross-cta-reduction-producer.md  generic-tiling-layer.md  golden-configs-yaml.md  golden-dynm-seed-rtx5090-findings.md  golden-knob-heuristics.md  golden-sweep-report.md  golden-sweep-rtx4070ti-findings.md  golden-sweep-rtx4070ti-retune-2026-06-18-findings.md  (+73 more)
results/: pro6000_x_1_QuantTrio_Qwen3-Coder-30B-A3B-Instruct-AWQ_vllm_benchmark.txt  rtx5090_x_1_QuantTrio_Qwen3-Coder-30B-A3B-Instruct-AWQ_vllm_benchmark.txt
scripts/: aggregate_embedding.py  aggregate_sgemm.py  bench_block.py  bench_full_model.py  bench_gen_post.py  bench_gen_serve.py  bench_matmul.py  bench_model_kernels.py  bench_tiled_matmul.py  check_golden.py  compare_embeddings.py  count_loc.py  diff_perf_results.py  experiment.py  find_golden_configs.py  gen_prior_data.sh  golden_knob_heuristics.py  merge_node_db.py  migrate_goldens_to_codec.py  new_models.py  plot_mcr_sweep.py  prior_bakeoff.py  prior_data.py  profile_gen_decode.py  remote_node_tune.py  render_blog_perf_chart.py  sweep_matmul_tiles.py  sweep_pass_gates.py  sweep_subtile.py  tc_sweep.sh  test_cloudrift_ssh.py  trace_full_model_spike.py  train_prior.py  tune_golden_set.py  visualize_bank_conflicts.py
tests/: ARCHITECTURE.md  conftest.py  test_bench_dryrun.py  test_compose.py  test_deploy_cloud.py  test_deploy_cloud_dryrun.py  test_deploy_dryrun.py  test_detect.py  test_dim_arithmetic.py  test_gpu.py  test_hardware.py  test_new_models.py  test_planner.py  test_publish.py  test_recipe.py  test_redact.py  test_storage.py  test_timing.py  test_visualize.py  test_vm_cloudrift.py  test_vm_dryrun.py  test_vm_gcp_flex_start.py  xfail_registry.py
utils/: download_model.py  generate_compose.py
(+2426 files in other folders)
