[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deplodock"
version = "0.1.0"
description = "Deploy and benchmark LLM inference on GPU servers using vLLM"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub[cli,hf_transfer]",
    "httpx",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-xdist", "ruff"]
compile = ["torch", "transformers", "cppyy==3.5.0", "safetensors"]
# flash-attn requires torch at build time, install separately:
#   pip install flash-attn --no-build-isolation
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "ruff", "matplotlib", "graphviz", "torch", "transformers", "cupy-cuda12x; sys_platform == 'linux'", "cppyy==3.5.0", "safetensors"]

[tool.setuptools.packages.find]
include = ["deplodock*"]

[project.scripts]
deplodock = "deplodock.deplodock:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "perf: GPU performance comparison vs PyTorch (deselected by default; run with `pytest -m perf`)",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"deplodock/compiler/backend/cuda/generators/tiled.py" = ["E501"]  # Generated CUDA code has long inline PTX strings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
