[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emmy-llm"
version = "0.1.1"
description = "Deploy and benchmark LLM inference on GPU servers using vLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub[cli,hf_transfer]",
    "httpx",
    "numpy",
    "pyyaml",
    "catboost",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-xdist", "ruff"]
compile = ["torch", "transformers>=5.10", "cppyy==3.5.0", "safetensors"]
# vLLM out-of-tree embedding plugin (emmy/serving); vllm pins its own torch.
# fastapi<0.137 cap: vllm 0.22.1 pins fastapi only as `>=0.115.0` (no upper bound),
# so a fresh install pulls fastapi>=0.137, whose new `_IncludedRouter` route objects
# (no `.path`) crash vllm's bundled prometheus-fastapi-instrumentator 8.0.0 on every
# request — `serve --bench` then never passes /health. Drop the cap once vllm ships
# a prometheus-fastapi-instrumentator that handles fastapi's `_IncludedRouter`.
serving = ["vllm>=0.22.1,<0.23", "fastapi[standard]<0.137"]
visualize = ["playwright>=1.40"]
# flash-attn requires torch at build time, install separately:
#   pip install flash-attn --no-build-isolation
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "ruff", "matplotlib", "graphviz", "torch", "transformers>=5.10", "cupy-cuda12x; sys_platform == 'linux'", "cppyy==3.5.0", "safetensors", "playwright>=1.40"]

[tool.setuptools.packages.find]
include = ["emmy*"]

[tool.setuptools.package-data]
"emmy.compiler.pipeline.search" = ["goldens/*.yaml"]

[project.scripts]
emmy = "emmy.emmy:main"

[project.entry-points."vllm.general_plugins"]
emmy_serving = "emmy.serving:register"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "perf: GPU performance comparison vs PyTorch (deselected by default; run with `pytest -m perf`)",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"emmy/compiler/backend/cuda/generators/tiled.py" = ["E501"]  # Generated CUDA code has long inline PTX strings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
